Fixed img not showing on production

--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -28,6 +28,7 @@ h1
     padding: 0.5em 1em;
     color: white;
     margin-top: 2em;
+    border-color: var(--colour-primary);
 }
 .get-started-btn:hover
 {
